# AParseParts

./: AvitoParser.py  ProxyExtension.py  README.md  avito_competitors.sql  database_build.py  proxies.py  pyproject.toml  regions_ids.py  requirements.txt
